sandbox/output
GildedRoseTest.java:70: error: cannot find symbol
            .filter(GildedRose.isSellInNoMoreThan0())
                              ^
  symbol:   method isSellInNoMoreThan0()
  location: class GildedRose
1 error
